# nearest-neighbour-cg

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_methods.md  justfile  nn_CGAL  project_structure.yaml  pyproject.toml  setup_project.py
cpp/bindings/: cgal_kdtree_bindings.cpp  convex_hull_ext.cpp  kd_tree_bindings.cpp
cpp/include/: KDTree2D_CGAL.hpp
cpp/src/: nearest_neighbour.cpp  nn_CGAL copy.cpp  nn_CGAL.cpp  nn_CGAL_bindings_tmp.cpp  test_nn_CGAL.cpp
cpp/tests/: test_convex_hull.cpp
docs/: ComputationalGeometry_CoreConcepts.md  README_convex_hull.md  README_methods.md
notebooks/: xcpp.ipynb
python/app/: hulls.py  main.py
python/scripts/: autopybind11.py  benchmarking.py  duckdb_sql_nn.py  test_cpp_version.py  visualise_hull.py
python/src/: kdtree_backend.py  kdtree_backends.py
python/tests/: test_convex_hull.py
