[project]
name = "nearest-neighbour-cg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
    "watchdog>=6.0.0",
]
