[project]
name = "nearest-neighbour-cg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.2",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
    "tabulate>=0.9.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "notebook>=7.4.3",
    "pytest>=8.3.5",
]
